<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_bg"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/my_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/date_picker_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/my_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/date_picker_text_light"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/my_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="@color/date_picker_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/date_picker_divider" />


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/date_picker_bg"-->
<!--        android:gravity="center_vertical"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingStart="20dp"-->
<!--        android:paddingTop="15dp"-->
<!--        android:paddingEnd="20dp"-->
<!--        android:paddingBottom="20dp">-->
<!--        <CustomTimePicker.PickerView-->
<!--            android:id="@+id/my_dialog_hour"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="@dimen/picker_view_height"-->
<!--            android:layout_weight="2" />-->

<!--        <TextView-->
<!--            android:id="@+id/my_dialog_hour_unit"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/hour"-->
<!--            android:textColor="@color/date_picker_text_dark"-->
<!--            android:textSize="@dimen/date_unit_text_size" />-->
<!--        <CustomTimePicker.PickerView-->
<!--            android:id="@+id/my_dialog_minute"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="@dimen/picker_view_height"-->
<!--            android:layout_weight="2" />-->
<!--        <TextView-->
<!--            android:id="@+id/my_dialog_minute_unit"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/minute"-->
<!--            android:textColor="@color/date_picker_text_dark"-->
<!--            android:textSize="@dimen/date_unit_text_size" />-->
<!--    </LinearLayout>-->
</LinearLayout>