<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".MyAppActivity">
<!--    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">-->
    <TableLayout
        android:id="@+id/main_layout_TableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,3"
        >
        <TableRow>
            <TextView/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="20sp"
                android:textColor="#000000"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="请输入卡号"
                android:minWidth="200dp"/>
            <TextView/>
        </TableRow>
        <TableRow
            android:layout_marginTop="8dp">
            <TextView/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="#000000"/>
           <!-- <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="请输入内容"
                android:minWidth="200dp"/>-->
            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="请输入密码"/>

            <TextView/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:id="@+id/main_layout_LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_below="@+id/main_layout_TableLayout1"
        android:layout_marginTop="8dp"
        >
<!--        <Button
            android:id="@+id/main_layout_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改"
            android:layout_marginRight="10dp"
            />-->
        <Button
            android:id="@+id/main_layout_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="保存"
            app:backgroundTint="#2196F3" />

    </LinearLayout>
        <LinearLayout
            android:id="@+id/main_layout_LinearLayout2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_layout_LinearLayout1"
            android:layout_marginTop="30dp"
            >
        <TextView
            android:id="@+id/main_layout_textView_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:text="@string/text1"
            android:textSize="20sp"
            android:textColor="#000000"
            />

<!--        <EditText
            android:id="@+id/main_layout_editText_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="20dp"
            android:hint="#"
            />-->
            <Button
                android:id="@+id/Demo_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="设置时间"
                app:backgroundTint="#00BCD4" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_layout_LinearLayout3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_layout_LinearLayout2"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/main_layout_textView_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:text="@string/text2"
                android:textSize="20sp"
                android:textColor="#000000"
                />

            <Switch
                android:id="@+id/main_layout_switch1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
<!--        <LinearLayout
            android:id="@+id/main_layout_LinearLayout4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp">
            <TextView
                android:id="@+id/main_layout_textView_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="今日是否填报"
                android:textSize="20dp"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>-->
    <TableLayout
        android:id="@+id/main_layout_TableLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_layout_LinearLayout3"
        android:layout_marginTop="30dp"
        android:stretchColumns="1,3"
        >
        <TableRow>

            <TextView
                android:id="@+id/main_layout_textView_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/text3"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView />

<!--            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:text="已填报"

                android:textSize="24sp"
                android:visibility="visible" />-->
            <TextView
                android:id="@+id/main_layout_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whether_fill"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/shape"
                />
            <TextView />

        </TableRow>
    </TableLayout>
    <LinearLayout
        android:id="@+id/main_layout_LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_below="@+id/main_layout_TableLayout2"
        android:layout_marginTop="8dp"
        >
        <!--        <Button
                    android:id="@+id/main_layout_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="修改"
                    android:layout_marginRight="10dp"
                    />-->
        <Button
            android:id="@+id/main_layout_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="保存"
            app:backgroundTint="#4CAF50" />

    </LinearLayout>
<!--    </RelativeLayout>-->



    <!--    <LinearLayout-->
<!--        android:id="@+id/main_layout_LinearLayout1"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="100dp">-->
<!--        <TextView-->
<!--            android:id="@+id/main_layout_textView_1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:text="一卡通"-->
<!--            android:textSize="20dp"-->
<!--            android:textColor="#000000"-->
<!--            />-->
<!--        <EditText-->
<!--            android:id="@+id/main_layout_editText_1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="3"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:hint="请输入内容"-->
<!--            />-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:id="@+id/main_layout_LinearLayout2"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/main_layout_LinearLayout1">-->
<!--    <TextView-->
<!--        android:id="@+id/main_layout_textView_2"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:text="密码"-->
<!--        android:textSize="20dp"-->
<!--        android:textColor="#000000"-->
<!--        />-->
<!--    <EditText-->
<!--        android:id="@+id/main_layout_editText_2"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="3"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:hint="请输入内容"/>-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="right"-->
<!--        android:layout_below="@id/main_layout_LinearLayout2">-->
<!--        <Button-->
<!--            android:id="@+id/main_layout_button_1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="修改"-->
<!--            android:layout_marginRight="10dp"-->
<!--            />-->
<!--        <Button-->
<!--            android:id="@+id/main_layout_button_2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="保存"/>-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:id="@+id/main_layout_LinearLayout4"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="300dp">-->
<!--    <TextView-->
<!--        android:id="@+id/main_layout_textView_4"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="2"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:text="每日填报时间"-->
<!--        android:textSize="20dp"-->
<!--        android:textColor="#000000"-->
<!--        />-->
<!--    <EditText-->
<!--        android:id="@+id/main_layout_editText_4"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="3"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:hint="#"-->
<!--        />-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:id="@+id/main_layout_LinearLayout5"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="360dp">-->
<!--        <TextView-->
<!--            android:id="@+id/main_layout_textView_5"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="2"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:text="是否每日自动填报"-->
<!--            android:textSize="20dp"-->
<!--            android:textColor="#000000"-->
<!--            />-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:id="@+id/main_layout_LinearLayout6"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="400dp">-->
<!--        <TextView-->
<!--            android:id="@+id/main_layout_textView_6"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="2"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:text="今日是否填报"-->
<!--            android:textSize="20dp"-->
<!--            android:textColor="#000000"-->
<!--            />-->
<!--    </LinearLayout>-->

</RelativeLayout>